Blazor.WinOld.Components/Components/Menu/WinOldMenu.razor.css
.menu-backdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}

.menu-win {
    display: flex;
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: 13px;
    user-select: none;
    position: relative;
}

.submenu-win, .subsub-win {
    display: none;
    position: absolute;
    border: 1px solid #808080;
    border-top: 1px solid #fff;
    min-width: 180px;
    list-style: none;
    padding: 2px 0;
    margin: 0;
    z-index: 9999;
}

.submenu-win {
    top: 100%;
    left: 0;
}

.subsub-win {
    top: -3px;
    left: 100%;
    z-index: 300;
}

    .submenu-win.open, .subsub-win.open {
        display: block;
    }

/*-------------------------------------------*\
    Context Menu
\*-------------------------------------------*/
.contextmenu-win {
    position: fixed;
    display: none;
    list-style: none;
    padding: 2px 0;
    margin: 0;
    z-index: 10000;
    min-width: 180px;
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: 13px;
    user-select: none;
}

    .contextmenu-win.open {
        display: block;
    }

/*-------------------------------------------*\
    Win 98
\*-------------------------------------------*/
.menu-win-98 {
    border: none;
    background: var(--win98-background);
    color: #000;
}

.submenu-win-98, .subsub-win-98 {
    font-family: var(--font-family);
    border: none;
    background: var(--win98-background);
    box-shadow: inset -1px -1px #0a0a0a,inset 1px 1px #fff,inset -2px -2px grey,inset 2px 2px #dfdfdf;
    border-radius: 0;
    padding: 2px 5px 4px 5px;
    color: #000;
}

/*-------------------------------------------*\
    Win XP
\*-------------------------------------------*/
.menu-win-xp {
    background: var(--winxp-background);
}

.submenu-win-xp, .subsub-win-xp {
    font-size: 9pt;
    box-shadow: rgba(0, 0, 0, 0.5) 4px 4px 3px -2px;
    color: initial;
    min-width: 150px;
    background: #fff;
    border: 1px solid #ACA899;
    border-image: initial;
    padding: 2px;
}

/*-------------------------------------------*\
    Win 7
\*-------------------------------------------*/
.menu-win-7 {
    background: linear-gradient(rgb(255, 255, 255) 20%, rgb(241, 244, 250) 25%, rgb(241, 244, 250) 43%, rgb(212, 219, 238) 48%, rgb(230, 234, 246));
}

.submenu-win-7, .subsub-win-7 {
    font: var(--font);
    font-size: 9pt;
    box-shadow: rgba(0, 0, 0, 0.5) 4px 4px 3px -2px;
    color: initial;
    min-width: 150px;
    background: #f0f0f0;
    border-width: 1px;
    border-style: solid;
    border-color: rgba(0, 0, 0, 0.4);
    border-image: initial;
    padding: 2px;
}

/*-------------------------------------------*\
Win 10
\*-------------------------------------------*/
.menu-win-10 {
    background: #FCFCFC;
    padding: 2px 5px 4px 5px;
    color: #000;
}

.submenu-win-10, .subsub-win-10 {
    border: #DCDCDC 1px solid;
    background: #FCFCFC;
    border-radius: 5px;
    padding: 2px 5px 4px 5px;
    margin-top: 4px;
    color: #000;
    animation: menu-appear-win-10 0.15s ease-out forwards;
    box-shadow: 0px 10px 13px -1px rgba(0, 0, 0, 0.09);
}

@keyframes menu-appear-win-10 {
    from {
        opacity: 0;
        transform: translateY(-8px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

